--- a/frontend/src/Components/Navigation/navigation.css
+++ b/frontend/src/Components/Navigation/navigation.css
@@ -1,3 +1,10 @@
+.navigationMainDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1.5em;
+  margin-bottom: 50px;
+}
 /* .navigation {
   display: flex;
   flex-direction: row;
