--- a/frontend/src/Components/CarTestPage/BodyTestPage/BodyTest.css
+++ b/frontend/src/Components/CarTestPage/BodyTestPage/BodyTest.css
@@ -2,18 +2,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 300px;
+    gap: 30vw;
 }
 .bodyTestForm{
     text-align: right;
+}.bodyTestForm input{
+    text-align: right;
+    width: 100%;
+    border: none;
 }
 textarea{
     width: 100%;
-    height: 200px;
+    height: 100px;
     border: none;
-    resize: none;
-}
-input{
-    width: 100%;
-    border: none;
+    resize: none !important;
 }
